Fixed navbar hover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ li {
   display: inline-block; }
 
 body {
-  background-color: #f7f7f7; }
+  background-color: #f7f7f7;
+  min-width: 280px; }
 
 body {
   font-family: "Kumbh Sans", sans-serif; }
@@ -56,8 +57,7 @@ body {
       bottom: 0;
       width: 100%;
       height: 4.8rem;
-      padding: 0;
-      z-index: 9999; }
+      padding: 0; }
     .nav__menu {
       position: absolute;
       top: 100%;
@@ -74,6 +74,8 @@ body {
         align-items: center;
         justify-content: space-evenly;
         flex-direction: column; }
+        .nav__menu ul li:hover {
+          color: #f7f7f7; }
     .nav__logo {
       font-size: 2rem; }
     .nav__logo-box {
