--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -44,7 +44,6 @@
       width: 100%;
       height: 4.8rem;
       padding: 0;
-      z-index: 9999;
     }
 
     &__menu {
@@ -55,7 +54,6 @@
       width: 100vw;
       background-color: $primary-color;
       transition: all 0.5s ease;
-      //z-index: 999;
 
       &-active {
         top: calc(-100vh + 4.8rem);
@@ -67,6 +65,10 @@
         align-items: center;
         justify-content: space-evenly;
         flex-direction: column;
+
+        li:hover {
+          color: $color-body;
+        }
       }
     }
 
